# why-usb

./: .gitignore  Cargo.toml  PLAN.md  agent.md  architecture_description.md  fix_zwclose.patch  test.md
client/: Cargo.toml
client/src/: config.rs  main.rs  session.rs  vhci.rs
daemon/: Cargo.toml  build.rs
daemon/src/: config.rs  driver_backend.rs  endpoint_queue.rs  ioctl.rs  logging.rs  main.rs  mapped_ring.rs  session.rs  usbip_session.rs  windows_driver_backend.rs
driver/: CMakeLists.txt  why_usb_vhci.inf  why_usb_vhci.sln
driver/inc/: device.h  driver.h  ioctl.h  ring_buffer.h  vhci.h
driver/src/: device.cpp  driver.cpp  vhci.cpp
driver/tests/: ring_buffer_tests.cpp
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: local_mock_bulk.sh  local_mock_faults.sh  local_mock_integration.sh  local_mock_stress.sh  local_usbip_mock.sh  wsl_vhci_probe.sh
