[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.1"
futures = "0.3.32"
protocol = { path = "../protocol" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
